classDiagram
  class User {
    +id: bigint
    +name: string
    +email: string (unique)
    +phone: string (unique)
    +national_id: string (unique)
    +password: string (hashed)
    +email_verified_at: timestamp
    +remember_token: string
    +userRole: string
    +annual_leave_balance: int
    +sick_leave_balance: int
    +emergency_leave_balance: int
    +hired_on: date
    +address: text
    +bank_acc_no: string
    +deleted_at: timestamp
    +created_at: timestamp
    +updated_at: timestamp
    +attendances(): HasMany
    +leaveRequests(): HasMany
    +schedules(): HasMany
  }

  class Attendance {
    +id: bigint
    +user_id: bigint (FK)
    +schedule_id: bigint (FK, nullable)
    +date: date
    +status: string
    +sign_in_time: time
    +sign_off_time: time
    +notes: string
    +is_manually_filled: boolean
    +deleted_at: timestamp
    +created_at: timestamp
    +updated_at: timestamp
    +user(): BelongsTo
    +employee(): BelongsTo
    +schedule(): BelongsTo
  }

  class LeaveRequest {
    +id: bigint
    +user_id: bigint (FK)
    +type: string
    +start_date: date
    +end_date: date
    +message: text
    +status: smallint
    +admin_response: text
    +deleted_at: timestamp
    +created_at: timestamp
    +updated_at: timestamp
    +user(): BelongsTo
    +employee(): BelongsTo
  }

  class Schedule {
    +id: bigint
    +user_id: bigint (FK)
    +shift_type: string
    +week_start: date
    +day: date
    +submitted: boolean
    +deleted_at: timestamp
    +created_at: timestamp
    +updated_at: timestamp
    <<unique (week_start, day, shift_type)>>
    +user(): BelongsTo
    +employee(): BelongsTo
    +attendances(): HasMany
  }

  User --> "*" Attendance : hasMany
  User --> "*" LeaveRequest : hasMany
  User --> "*" Schedule : hasMany
  Schedule --> "*" Attendance : hasMany

